package com.example.spring_app.models;

public enum OrderStatus {
    PENDING,
    PAID,
    CANCELLED
}
